--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> </head>
-    <body></body>
+
+<head>
+    <link data-trunk rel="css" href="styles.css" />
+</head>
+
+<body></body>
+
 </html>
